code optimization and minor bugfix